非推奨メソッドの置換